--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,7 @@ importFrom(MASS, mvrnorm, stepAIC)
 importFrom(glmnet, glmnet, cv.glmnet)
 importFrom(caret, train, trainControl, twoClassSummary)
 #importFrom(SuperLearner, SuperLearner, All)
-importFrom(methods, is)
-
+importFrom(methods, is, hasArg)
 importFrom(flexsurv, flexsurvreg, flexsurvspline)
 importFrom(survivalmodels, deepsurv)
 importFrom(randomForestSRC, rfsrc, tune.rfsrc, rfsrc.fast)
@@ -74,8 +73,11 @@ S3method(summary, sltime)
 S3method(plot, libsl)
 S3method(plot, sltime)
 
+export(plot.libsl)
+
 S3method(print, libsl)
 S3method(print, sltime)
 
 S3method(plot, rocrisca)
 #S3method(lines, rocrisca)
+
