--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.94
 Depends: R (>= 4.0.0), splines, survival
 Imports: date, graphics, MASS, glmnet, caret,
         flexsurv, randomForestSRC,
-        hdnom, glmnetUtils,
+        hdnom, glmnetUtils, survivalPLANN,
         dplyr, rpart, methods
 Suggests: reticulate, survivalmodels
 Description: Several functions and S3 methods to construct a super learner in the presence of censored times-to-event and to evaluate its prognostic capacities.
