--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,11 @@
 import(splines)
 import(survival)
+import(survivalPLANN)
+import(RISCA)
 
-importFrom(survivalPLANN, survivalPLANN)
 
+importFrom(stats, terms)
+    importFrom(utils, data)
 importFrom(stats, pnorm, dnorm, qnorm, update,  binomial, lm, glm, na.omit, predict, quantile,
            sd, optim, pchisq, update.formula, coef, setNames, as.formula, model.matrix,
            median, formula)
@@ -21,7 +24,7 @@ importFrom(flexsurv, flexsurvreg, flexsurvspline)
 importFrom(randomForestSRC, rfsrc, tune.rfsrc, rfsrc.fast)
 
 importFrom(hdnom, glmnet_basesurv)
-importFrom(glmnetUtils, cva.glmnet)
+importFrom(glmnetUtils, cv.glmnet)
 
 importFrom(dplyr, last)
 
@@ -39,24 +42,27 @@ export(LIB_COXridge)
 export(LIB_COXen)
 export(LIB_COXaic)
 export(LIB_COXall)
-export(LIB_SNN)
 export(LIB_RSF)
 export(LIB_PLANN)
 
 export(survivalSL)
 
 export(tunePHspline)
-export(tuneCOXaic)
 export(tuneCOXlasso)
 export(tuneCOXridge)
 export(tuneCOXen)
-export(tuneSNN)
 export(tuneRSF)
 export(tunePLANN)
-
+export(plot.libsl)
+export(plot.sltime)
 export(roc)
-
 export(metrics)
+export(predict.libsl)
+export(predict.sltime)
+export(summary.libsl)
+export(summary.sltime)
+
+
 
 S3method(predict, libsl)
 S3method(predict, sltime)
@@ -67,7 +73,7 @@ S3method(summary, sltime)
 S3method(plot, libsl)
 S3method(plot, sltime)
 
-export(plot.libsl)
+
 
 S3method(print, libsl)
 S3method(print, sltime)
