--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,11 @@
 Package: survivalSL
 Type: Package
 Title: Super Learner for Survival Prediction from Censored Data
-Version: 0.97
+Version: 0.98
 Depends: R (>= 4.0.0), splines, survival
 Imports: date, graphics, MASS, glmnet, caret,
-        flexsurv, randomForestSRC,
-        hdnom, glmnetUtils, survivalPLANN,
-        dplyr, rpart, methods
-Suggests: reticulate, survivalmodels
+         flexsurv, randomForestSRC, hdnom,  survivalPLANN,
+         dplyr, rpart, methods
 Description: Several functions and S3 methods to construct a super learner in the presence of censored times-to-event and to evaluate its prognostic capacities.
 License: GPL (>=2)
 LazyLoad: yes
